Fixed search button overflow

--- a/shufl-web/src/app/components/album/album.component.scss
+++ b/shufl-web/src/app/components/album/album.component.scss
@@ -54,6 +54,8 @@
                 }
 
                 * {
+                    height: 70px;
+
                     margin-bottom: 5px;
                 }
             }
